fix horizontal scrollbar and page width huge issue

--- a/public/sass/screen.scss
+++ b/public/sass/screen.scss
@@ -121,6 +121,7 @@ body {
   @include background($color-three);  // Fallback
   @include background(rgba($color-three, $background-opacity));  // Fallback
   @include background(linear-gradient(rgba($color-three, $background-opacity - 0.1) 0%, rgba($color-three, 1.0) 20%), image-url("/img/background.png"));
+  overflow-x: hidden;  // Won't work on IE6/7: http://stackoverflow.com/questions/2284562/absolutely-positioned-div-on-right-causing-scrollbar-when-the-left-doesnt
 	#body-inner {
     @include background(url(/img/graph-paper-5.png));
 		.container {
